test-suite/tests/fail/ui/input/invalid_stateset_attribute.rs
use stated::stated;

#[stated(states(A), unsupported)]
pub struct Test<#[stated] S>;

#[stated]
impl<#[stated] S> Test<S> {}

fn main() {}
