test-suite/tests/fail/ui/input/invalid_stateset_attribute.stderr
error: invalid attribute
 --> tests/fail/ui/input/invalid_stateset_attribute.rs:3:21
  |
3 | #[stated(states(A), unsupported)]
  |                     ^^^^^^^^^^^

error: invalid attribute
 --> tests/fail/ui/input/invalid_stateset_attribute.rs:3:21
  |
3 | #[stated(states(A), unsupported)]
  |                     ^^^^^^^^^^^
...
6 | #[stated]
  | --------- in this attribute macro expansion
  |
  = note: this error originates in the macro `Test` which comes from the expansion of the attribute macro `stated` (in Nightly builds, run with -Z macro-backtrace for more info)
